Implemented unit conversion & toggle active class

--- a/src/style.css
+++ b/src/style.css
@@ -116,3 +116,12 @@ img,
 .weather-desc:first-letter {
   text-transform: capitalize;
 }
+
+.main-temp .active {
+  color: #212529;
+  cursor: default;
+}
+
+.main-temp .active:hover {
+  text-decoration: none;
+}
