--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,12 @@ body {
   font-family: "Roboto", sans-serif;
   max-width: 700px;
   margin: 0 auto;
+  background-color: #e7f5fd;
+}
+
+.card {
+  box-shadow: 0px 1px 20px rgba(0, 0, 0, 0.1);
+  border-color: white;
 }
 
 .search-button {
@@ -26,7 +32,7 @@ h2,
 ul,
 .deg-far,
 .hi-lo,
-.days,
+.day,
 .update-info {
   color: #5c636b;
   font-weight: 300;
@@ -65,13 +71,15 @@ a,
 
 .small-icon {
   font-size: 30px;
+  padding: 10px 0px;
 }
 
-.icon-line {
-  background-color: #fff8d9;
-  border-radius: 10px;
+.day-forecast {
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.1);
+  border: 1px solid #dee2e6;
+  border-radius: 8px;
   width: 100%;
-  padding: 20px 0px;
+  padding: 10px 0px;
   margin-right: 0px;
   margin-left: 0px;
 }
@@ -99,7 +107,7 @@ img,
   right: 10px;
 }
 
-.days {
+.day {
   font-weight: 400;
 }
 
@@ -110,7 +118,7 @@ img,
 
 .code-link {
   font-size: smaller;
-  padding-top: 5px;
+  padding-top: 10px;
 }
 
 .weather-desc:first-letter {
