--- a/src/style.css
+++ b/src/style.css
@@ -78,7 +78,9 @@ ul,
 
 .small-icon {
   font-size: 30px;
-  padding: 10px 0px;
+  padding: 5px 0px;
+  position: relative;
+  bottom: 0px;
 }
 
 .day-forecast {
